[gd_scene load_steps=10 format=2]

[ext_resource path="res://TitleScreen/cat.PNG" type="Texture" id=1]
[ext_resource path="res://TitleScreen/Testlogo.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen/Buttons/newGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://TitleScreen/Buttons/continueButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://TitleScreen/Buttons/optionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/rainyhearts.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://fadeIn/fadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://TitleScreen/titleScreen.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[node name="titleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1480.0
margin_bottom = 820.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="menu"]
margin_right = 1360.0
margin_bottom = 326.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="centerRow" type="HBoxContainer" parent="menu"]
margin_top = 330.0
margin_right = 1360.0
margin_bottom = 550.0
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="menu/centerRow"]
margin_right = 678.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="newGameButton" parent="menu/centerRow/buttons" instance=ExtResource( 3 )]
margin_right = 678.0
margin_bottom = 60.0

[node name="continueButton" parent="menu/centerRow/buttons" instance=ExtResource( 4 )]
margin_top = 80.0
margin_right = 678.0
margin_bottom = 140.0

[node name="optionsButton" parent="menu/centerRow/buttons" instance=ExtResource( 5 )]
margin_top = 160.0
margin_right = 678.0
margin_bottom = 220.0

[node name="CenterContainer" type="CenterContainer" parent="menu/centerRow"]
margin_left = 682.0
margin_right = 1360.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="character" type="TextureRect" parent="menu/centerRow/CenterContainer"]
margin_left = 219.0
margin_top = 30.0
margin_right = 459.0
margin_bottom = 190.0
texture = ExtResource( 1 )

[node name="versionLabel" type="Label" parent="menu"]
margin_top = 554.0
margin_right = 1360.0
margin_bottom = 740.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Virgin 1.2.4
Idea Guys Incorporated"

[node name="fadeIn" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="fade_finished" from="fadeIn" to="." method="_on_fadeIn_fade_finished"]
